Handle External URL links.

--- a/Apester/Main.storyboard
+++ b/Apester/Main.storyboard
@@ -3,7 +3,7 @@
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -109,8 +109,8 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Lq0-op-lId">
-                                <rect key="frame" x="20" y="101" width="335" height="561"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="frame" x="20" y="101" width="335" height="546"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="NNR-EA-UZs">
                                     <size key="itemSize" width="375" height="200"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -153,9 +153,9 @@
                                 </connections>
                             </collectionView>
                         </subviews>
-                        <color key="backgroundColor" red="0.91748589277267456" green="0.91733479499816895" blue="0.93793874979019165" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" systemColor="systemGroupedBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="dkN-SG-8z9" firstAttribute="top" secondItem="Lq0-op-lId" secondAttribute="bottom" constant="5" id="5QG-xi-LOj"/>
+                            <constraint firstItem="dkN-SG-8z9" firstAttribute="top" secondItem="Lq0-op-lId" secondAttribute="bottom" constant="20" id="5QG-xi-LOj"/>
                             <constraint firstItem="Lq0-op-lId" firstAttribute="leading" secondItem="ben-VV-yfm" secondAttribute="leading" constant="20" id="6xY-uc-qEp"/>
                             <constraint firstAttribute="trailing" secondItem="Lq0-op-lId" secondAttribute="trailing" constant="20" id="qqj-kN-fMh"/>
                             <constraint firstItem="Lq0-op-lId" firstAttribute="top" secondItem="ZL4-IJ-CHq" secondAttribute="bottom" constant="5" id="sTC-Vl-i5b"/>
@@ -194,7 +194,7 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" red="0.9410129189491272" green="0.94086575508117676" blue="0.96146577596664429" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" systemColor="systemGroupedBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="1uh-Lx-CHo" firstAttribute="leading" secondItem="1S7-qO-L0y" secondAttribute="leading" constant="20" id="D2a-wi-oJe"/>
                             <constraint firstAttribute="trailing" secondItem="1uh-Lx-CHo" secondAttribute="trailing" constant="20" id="L9B-kv-mZp"/>
@@ -203,6 +203,7 @@
                     </view>
                     <connections>
                         <outlet property="containerView" destination="1uh-Lx-CHo" id="Ysk-uQ-Cmt"/>
+                        <outlet property="containerViewHeightConstraint" destination="NE8-4o-yKx" id="TPu-cq-5Pl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DqF-g3-hGY" userLabel="First Responder" sceneMemberID="firstResponder"/>
