Unit functionality and size work well

--- a/Apester/Main.storyboard
+++ b/Apester/Main.storyboard
@@ -8,6 +8,25 @@
     </dependencies>
     <scenes>
         <!--ApesterKit-->
+        <scene sceneID="2y1-F3-cq2">
+            <objects>
+                <viewController id="pma-5c-gKe" customClass="APEUnitViewController" customModule="Apester" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Tha-vb-h2l"/>
+                        <viewControllerLayoutGuide type="bottom" id="UCx-eN-l3Z"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="kQk-Ck-MAY">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="B81-fM-OCQ"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Q0p-FU-H3i" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="926" y="1704"/>
+        </scene>
+        <!--ApesterKit-->
         <scene sceneID="QTM-lg-cc7">
             <objects>
                 <tableViewController id="LMb-PD-XyA" sceneMemberID="viewController">
@@ -55,6 +74,26 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <segue destination="fOt-2H-GaU" kind="show" id="xRa-v6-grK"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="b87-J5-8Um" rowHeight="78" style="IBUITableViewCellStyleDefault" id="z4p-Vg-ouD">
+                                        <rect key="frame" x="16" y="211.5" width="343" height="78"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="z4p-Vg-ouD" id="CJj-eB-bw8">
+                                            <rect key="frame" x="0.0" y="0.0" width="317" height="78"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Unit (Collection View)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="b87-J5-8Um">
+                                                    <rect key="frame" x="15" y="0.0" width="294" height="78"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="pma-5c-gKe" kind="show" id="gec-C6-8lq"/>
                                         </connections>
                                     </tableViewCell>
                                 </cells>
