First draft of apeUnitWebView (#43)
* Unit functionality and size work well

* handle local configuration in APEUnitWebVIewDelegate

* reuse of componentsURL Dictionary extension

* renamed AlmogError to be APEUnitConfigurationError

* minor changes in APEUnitEnvironment

* handle to work in staging mode

* Changes from open PR

* Removed APEUnitWebViewDelegateV2

* renamed APEUnitWebView to be APEUnitView

* change APEUnitEnvironment to return proper url on production too

* updated make function in WKWebView

* cleanup and fixes

* cleanup

Co-authored-by: Hasan Sa <hasansa007@gmail.com>

--- a/Apester/Main.storyboard
+++ b/Apester/Main.storyboard
@@ -1,12 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="oXn-ea-6sv">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="oXn-ea-6sv">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Unit View Controller-->
+        <scene sceneID="2y1-F3-cq2">
+            <objects>
+                <viewController id="pma-5c-gKe" customClass="APEUnitViewController" customModule="Apester" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Tha-vb-h2l"/>
+                        <viewControllerLayoutGuide type="bottom" id="UCx-eN-l3Z"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="kQk-Ck-MAY">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VWw-u6-TLD">
+                                <rect key="frame" x="16" y="146" width="343" height="513"/>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="VWw-u6-TLD" firstAttribute="top" secondItem="Tha-vb-h2l" secondAttribute="bottom" constant="50" id="Dok-IL-CxT"/>
+                            <constraint firstItem="VWw-u6-TLD" firstAttribute="leading" secondItem="kQk-Ck-MAY" secondAttribute="leadingMargin" id="GhO-lD-6sz"/>
+                            <constraint firstItem="UCx-eN-l3Z" firstAttribute="top" secondItem="VWw-u6-TLD" secondAttribute="bottom" constant="8" symbolic="YES" id="Khh-qr-C0o"/>
+                            <constraint firstItem="VWw-u6-TLD" firstAttribute="trailing" secondItem="kQk-Ck-MAY" secondAttribute="trailingMargin" id="T6u-4Q-NeL"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="B81-fM-OCQ"/>
+                    <connections>
+                        <outlet property="unitContainerView" destination="VWw-u6-TLD" id="sfa-hM-DMk"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Q0p-FU-H3i" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="925.60000000000002" y="1703.2983508245879"/>
+        </scene>
         <!--ApesterKit-->
         <scene sceneID="QTM-lg-cc7">
             <objects>
@@ -55,6 +88,26 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <segue destination="fOt-2H-GaU" kind="show" id="xRa-v6-grK"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="b87-J5-8Um" rowHeight="78" style="IBUITableViewCellStyleDefault" id="z4p-Vg-ouD">
+                                        <rect key="frame" x="16" y="211.5" width="343" height="78"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="z4p-Vg-ouD" id="CJj-eB-bw8">
+                                            <rect key="frame" x="0.0" y="0.0" width="317" height="78"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Unit (Collection View)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="b87-J5-8Um">
+                                                    <rect key="frame" x="15" y="0.0" width="294" height="78"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="pma-5c-gKe" kind="show" id="gec-C6-8lq"/>
                                         </connections>
                                     </tableViewCell>
                                 </cells>
