--- a/Apester/Main.storyboard
+++ b/Apester/Main.storyboard
@@ -19,16 +19,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VWw-u6-TLD">
-                                <rect key="frame" x="10" y="96" width="355" height="571"/>
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VWw-u6-TLD">
+                                <rect key="frame" x="20" y="0.0" width="335" height="0.0"/>
+                                <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="VWw-u6-TLD" secondAttribute="trailing" constant="10" id="1Ab-uu-SMr"/>
-                            <constraint firstItem="VWw-u6-TLD" firstAttribute="top" secondItem="Tha-vb-h2l" secondAttribute="bottom" id="Dok-IL-CxT"/>
-                            <constraint firstItem="UCx-eN-l3Z" firstAttribute="top" secondItem="VWw-u6-TLD" secondAttribute="bottom" id="Khh-qr-C0o"/>
-                            <constraint firstItem="VWw-u6-TLD" firstAttribute="leading" secondItem="kQk-Ck-MAY" secondAttribute="leading" constant="10" id="iJ0-sW-QR4"/>
+                            <constraint firstAttribute="trailing" secondItem="VWw-u6-TLD" secondAttribute="trailing" constant="20" symbolic="YES" id="Jda-Hh-PJe"/>
+                            <constraint firstItem="VWw-u6-TLD" firstAttribute="leading" secondItem="kQk-Ck-MAY" secondAttribute="leading" constant="20" symbolic="YES" id="d5a-u1-gY8"/>
+                            <constraint firstItem="VWw-u6-TLD" firstAttribute="top" secondItem="kQk-Ck-MAY" secondAttribute="top" constant="100" id="tuO-dR-C1y"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="B81-fM-OCQ"/>
